--- a/css/header.css
+++ b/css/header.css
@@ -84,15 +84,15 @@ header .mainNav li:first-child{
  ****                                       main Page                                                              ****
  **********************************************************************************************************************/
 .eventViewer{
-    width: 1024px;
-    display: grid;
+	width: 1024px;
+	display: grid;
 	grid-template-columns: repeat(6, 1fr);
 	grid-template-rows: auto;
-    justify-items: center;
+	justify-items: center;
 	margin: auto;
 	background: grey;
-}
-.shopHeader{
+	}
+	.shopHeader{
 	background-color: purple;
 	color: white;
 	width: 100%;
@@ -101,67 +101,68 @@ header .mainNav li:first-child{
 	text-align: center;
 	font-family: "Metal Mania";
 	font-size: 48px;
-}
-.eventImg{
-	height: auto;
-	width: auto;
+	}
+	.eventImg{
+		height: 300px;
+		max-width: 400px;
 	object-fit: contain;
 	grid-column-start:1;
 	grid-column-end:2;
 	grid-row-start:2;
-	grid-row-end:5;	
+	grid-row-end:3;
 	padding: 10px;
-}
-.eventName{
+	}
+	.eventName{
 	grid-column-start:1;
 	grid-column-end: 4;
-}
-.eventTime{
+	}
+	.eventTime{
 	grid-column-start:5;
 	grid-column-end: 7;
-}
-.eventDesc{
+	}
+	.eventDesc{
 	grid-column-start: 2;
 	grid-column-end: 6;
 	grid-row-start: 2;
 	grid-row-end: 5;
-}
-.eventPriceLabel{
+	}
+	.eventPriceLabel{
 	grid-column-start: 6;
 	grid-column-end: 7;
 	grid-row-start: 2;
 	width: 100%;
 	background-color: pink;
 	text-align: center;
-}
-.eventMaxTicketsLabel{
+	}
+	.eventMaxTicketsLabel{
 	grid-column-start: 6;
 	grid-column-end: 7;
 	grid-row-start: 3;
-}
-.eventCurrentTicketsLabel{
+	}
+
+	.eventCurrentTicketsLabel{
 	grid-column-start: 6;
 	grid-column-end: 7;
 	grid-row-start: 4;
-}
-.eventPrice{
+	}
+	.eventPrice{
 	grid-column-start: 7;
 	grid-row-start: 2;
-}
-.eventMaxTickets{
+	}
+	.eventMaxTickets{
 	grid-column-start: 7;
 	grid-row-start: 3;
-}
-.eventCurrentTickets{
+	}
+	.eventCurrentTickets{
 	grid-column-start: 7;
 	grid-row-start: 4;
-}
-.BuyBtn{
+	}
+	.BuyBtn{
 	grid-column-start: 7;
 	grid-row-start: 5;
 	padding: 10px;
 	margin: 10px;
-}
+	}
  /**********************************************************************************************************************
  ****                                       shopping cart                                                           ****
  **********************************************************************************************************************/
@@ -187,8 +188,6 @@ header .mainNav li:first-child{
     width: 75px;
     height: 75px;
     object-fit: cover;
-    
-    
 }
 
 .ticketName{
@@ -199,4 +198,91 @@ header .mainNav li:first-child{
 }
 .ticketAmount{
 
+}
+
+ /**********************************************************************************************************************
+ ****                                       Admin                                                           ****
+ **********************************************************************************************************************/
+
+ .form-style-2{
+	max-width: 500px;
+	padding: 20px 12px 10px 20px;
+	font: 13px Arial, Helvetica, sans-serif;
+	margin: auto;
+}
+.form-style-2-heading{
+	font-weight: bold;
+	font-style: italic;
+	border-bottom: 2px solid #ddd;
+	margin-bottom: 20px;
+	font-size: 15px;
+	padding-bottom: 3px;
+}
+.form-style-2 label{
+	display: block;
+	margin: 15px 0px 15px 0px;
+}
+.form-style-2 label > span{
+	width: 100px;
+	font-weight: bold;
+	float: left;
+	padding-top: 8px;
+	padding-right: 5px;
+}
+.form-style-2 span.required{
+	color:red;
+}
+.form-style-2 .tel-number-field{
+	width: 40px;
+	text-align: center;
+}
+.form-style-2 input.input-field{
+	width: 48%;
+	
+}
+
+.form-style-2 input.input-field, 
+.form-style-2 .tel-number-field, 
+.form-style-2 .textarea-field, 
+ .form-style-2 .select-field{
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	border: 1px solid #C2C2C2;
+	box-shadow: 1px 1px 4px #EBEBEB;
+	-moz-box-shadow: 1px 1px 4px #EBEBEB;
+	-webkit-box-shadow: 1px 1px 4px #EBEBEB;
+	border-radius: 3px;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	padding: 7px;
+	outline: none;
+}
+.form-style-2 .input-field:focus, 
+.form-style-2 .tel-number-field:focus, 
+.form-style-2 .textarea-field:focus,  
+.form-style-2 .select-field:focus{
+	border: 1px solid #0C0;
+}
+.form-style-2 .textarea-field{
+	height:100px;
+	width: 55%;
+}
+.form-style-2 input[type=submit],
+.form-style-2 input[type=button]{
+	border: none;
+	padding: 8px 15px 8px 15px;
+	background: #FF8500;
+	color: #fff;
+	box-shadow: 1px 1px 4px #DADADA;
+	-moz-box-shadow: 1px 1px 4px #DADADA;
+	-webkit-box-shadow: 1px 1px 4px #DADADA;
+	border-radius: 3px;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+}
+.form-style-2 input[type=submit]:hover,
+.form-style-2 input[type=button]:hover{
+	background: #EA7B00;
+	color: #fff;
 }
