final final release, sorry for the ugliness

--- a/css/header.css
+++ b/css/header.css
@@ -23,7 +23,10 @@
 	text-align: right;
 	
 }
-
+#ticketSection{
+	background-color: lightgray;
+	text-align: center;
+}
 /**********************************************************************************************************************
  ****                                           Header                                                             ****
  **********************************************************************************************************************/
